[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/players blue x1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/heart.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.9976

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 8.535, 107.682, 16, 20 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 7, 16, 16, 16 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 8.535, 107.682, 16, 20 ), Rect2( 41, 109, 16, 20 ), Rect2( 72, 108, 16, 21 ), Rect2( 103, 108, 16, 20 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 18.997
height = 22.0082

[node name="player" type="KinematicBody2D" groups=["player"]]
rotation = 0.000295996
collision_mask = 29
script = ExtResource( 2 )

[node name="playerSprite" type="Sprite" parent="."]
position = Vector2( 0.000926971, 2.00008 )
scale = Vector2( 2.6875, 2.89286 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 8.535, 107.682, 16, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ScentTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Gui" type="Control" parent="."]
anchor_right = 0.548
margin_left = -507.0
margin_top = -300.0
margin_right = 511.0
margin_bottom = 303.0

[node name="Heart" type="Sprite" parent="Gui"]
position = Vector2( 34.9171, 20.1397 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Heart2" type="Sprite" parent="Gui"]
position = Vector2( 66.9171, 20.1302 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Heart3" type="Sprite" parent="Gui"]
position = Vector2( 98.9171, 20.1207 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="enemyDetection" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetection"]
shape = SubResource( 6 )

[connection signal="area_entered" from="enemyDetection" to="." method="_on_enemyDetection_area_entered"]
[connection signal="body_entered" from="enemyDetection" to="." method="_on_enemyDetection_body_entered"]
